--- a/.github/workflows/http_status.yml
+++ b/.github/workflows/http_status.yml
@@ -1,15 +1,34 @@
-name: Auto HTTP Status – all cleaned_data/*.csv
+name: Auto HTTP Status – cleaned_data/*.csv (manual only)
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "1 22 * * *" # daily 22:01 UTC
+    inputs:
+      csv_file:
+        description: "CSV file in cleaned_data/ (leave empty = process all)"
+        required: false
+        default: ""
 
 env:
   FLARE_ENDPOINT: http://localhost:8191/v1
 
 jobs:
+  discover:
+    runs-on: ubuntu-latest
+    outputs:
+      files: ${{ steps.set.outputs.files }}
+    steps:
+      - uses: actions/checkout@v4
+      - id: set
+        run: |
+          if [ -z "${{ github.event.inputs.csv_file }}" ]; then
+            files=$(find cleaned_data -name '*.csv' | jq -R -s -c 'split("\n") | map(select(. != ""))')
+          else
+            files=$(echo '["cleaned_data/${{ github.event.inputs.csv_file }}"]')
+          fi
+          echo "files=$files" >> $GITHUB_OUTPUT
+
   scrape:
+    needs: discover
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -19,37 +38,21 @@ jobs:
         image: flaresolverr/flaresolverr
         ports:
           - 8191:8191
-    needs: discover
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          fetch-depth: 0
-
-      - name: Install SSH key
-        uses: webfactory/ssh-agent@v0.9.0
+      - uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install Python deps
-        run: pip install cloudscraper pandas aiohttp aiofiles tqdm
-
-      - name: Run HTTP-status checker
-        run: |
+      - uses: actions/setup-python@v5
+        with: { python-version: "3.11" }
+      - run: pip install cloudscraper pandas aiohttp tqdm
+      - run: |
           mkdir -p http_status
-          python http_status_finder.py \
-            --input-file "${{ matrix.file }}" \
-            --output-dir http_status
-
-      - name: Commit & push updated CSV
-        run: |
+          python http_status_finder.py --input-file "${{ matrix.file }}" --output-dir http_status
+      - run: |
           git config user.name  "Ifeoluwa Oseni"
           git config user.email "ifeoseni@gmail.com"
           git add "http_status/$(basename '${{ matrix.file }}')"
@@ -57,14 +60,3 @@ jobs:
             git commit -m "chore: update http_status/$(basename '${{ matrix.file }}')"
             git push origin HEAD:${{ github.ref }}
           }
-
-  discover:
-    runs-on: ubuntu-latest
-    outputs:
-      files: ${{ steps.set.outputs.files }}
-    steps:
-      - uses: actions/checkout@v4
-      - id: set
-        run: |
-          FILES=$(find cleaned_data -name '*.csv' | jq -R -s -c 'split("\n") | map(select(. != ""))')
-          echo "files=$FILES" >> $GITHUB_OUTPUT
