--- a/.github/workflows/http_status.yml
+++ b/.github/workflows/http_status.yml
@@ -4,13 +4,13 @@ on:
   workflow_dispatch:
     inputs:
       files:
-        description: 'Comma-separated list of CSV files (e.g., http_status/1.csv,http_status/2.csv)'
+        description: "Comma-separated list of CSV files (e.g., http_status/1.csv,http_status/2.csv)"
         required: true
         type: string
       output_folder:
-        description: 'Output folder for results (e.g., network_features)'
+        description: "Output folder for results (e.g., network_features)"
         required: true
-        default: 'network_features'
+        default: "network_features"
 
 jobs:
   validate-and-split:
@@ -22,9 +22,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          fetch-depth: 0  # Full clone
+          fetch-depth: 0 # Full clone
 
-      - name: Debug: List All CSV Files
+      - name: List All CSV Files
         run: |
           echo "🔍 Searching for all CSV files in the repository..."
           ALL_CSVS=$(find . -type f -name "*.csv" | sort)
@@ -43,10 +43,10 @@ jobs:
           # Trim and split input files
           IFS=',' read -ra FILE_LIST <<< "${{ github.event.inputs.files }}"
           valid_count=0
-          
+
           # Start building matrix
           matrix_json="{\"include\": ["
-          
+
           for file in "${FILE_LIST[@]}"; do
             # Trim whitespace
             file=$(echo "$file" | xargs)
@@ -54,6 +54,7 @@ jobs:
               continue
             fi
             
+            # Validate that file exists
             if [ -f "$file" ]; then
               echo "✅ Found input file: $file"
               output_file="${{ github.event.inputs.output_folder }}/$(basename "$file")"
@@ -66,14 +67,19 @@ jobs:
               exit 1
             fi
           done
-          
+
+          # Check if any valid files were found
           if [ $valid_count -eq 0 ]; then
             echo "::error::No valid input files provided."
             exit 1
           fi
-          
+
           # Finalize JSON (remove trailing comma)
           matrix_json="${matrix_json%,} ]}"
+
+          # Set matrix as output
           echo "matrix=$matrix_json" >> "$GITHUB_OUTPUT"
+
+          # Display the generated matrix for debugging
           echo "✅ Generated matrix for $valid_count file(s):"
           echo "$matrix_json" | python3 -m json.tool || echo "$matrix_json"
