--- a/.github/workflows/http_status.yml
+++ b/.github/workflows/http_status.yml
@@ -83,3 +83,74 @@ jobs:
           # Display the generated matrix for debugging
           echo "✅ Generated matrix for $valid_count file(s):"
           echo "$matrix_json" | python3 -m json.tool || echo "$matrix_json"
+
+  run-network-analysis:
+    needs: validate-and-split
+    runs-on: ubuntu-latest
+    timeout-minutes: 350 # 5h 50m (max safe limit)
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.validate-and-split.outputs.matrix) }}
+
+    steps:
+      - name: Checkout repository via SSH
+        uses: actions/checkout@v4
+        with:
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          fetch-depth: 0 # Full clone
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas cloudscraper beautifulsoup4 tldextract whois dnspython requests aiohttp backoff
+
+      - name: Create output directory
+        run: |
+          mkdir -p "$(dirname ${{ matrix.output_file }})"
+
+      - name: Run Network Feature Extraction
+        run: |
+          python network_feature_extractor.py \
+            --input "${{ matrix.input_file }}" \
+            --output "$(dirname ${{ matrix.output_file }})"
+
+      - name: Verify output
+        run: |
+          if [ -f "${{ matrix.output_file }}" ]; then
+            echo "✅ Successfully generated ${{ matrix.output_file }}"
+          else
+            echo "::error::Failed to generate ${{ matrix.output_file }}"
+            exit 1
+          fi
+
+  commit-results:
+    needs: run-network-analysis
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository via SSH
+        uses: actions/checkout@v4
+        with:
+          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          fetch-depth: 0 # Full clone
+
+      - name: Commit and push network features
+        env:
+          GIT_SSH_COMMAND: "ssh -i ${{ secrets.SSH_PRIVATE_KEY }} -o StrictHostKeyChecking=no"
+        run: |
+          git config user.name "Ifeoluwa Oseni"
+          git config user.email "ifeoseni@gmail.com"
+
+          git add ${{ github.event.inputs.output_folder }}/*.csv
+
+          if ! git diff --cached --quiet; then
+            git commit -m "feat: add extracted network features [skip ci]"
+            git pull origin main --rebase || echo "Rebase conflict? Safe to retry."
+            git push origin main
+          else
+            echo "➡️ No changes to commit"
+          fi
