--- a/.github/workflows/http_status.yml
+++ b/.github/workflows/http_status.yml
@@ -1,16 +1,16 @@
-name: Extract Network Features (Manual Matrix)
+name: Test Extract Network Features (Manual Matrix with Artifacts)
 
 on:
   workflow_dispatch:
     inputs:
       files:
-        description: "Comma-separated list of CSV files (e.g., http_status/1.csv,http_status/2.csv)"
+        description: 'Comma-separated list of CSV files (e.g., http_status/1.csv,http_status/2.csv)'
         required: true
         type: string
       output_folder:
-        description: "Output folder for results (e.g., network_features)"
+        description: 'Output folder for results (e.g., network_features)'
         required: true
-        default: "network_features"
+        default: 'network_features'
 
 jobs:
   validate-and-split:
@@ -22,14 +22,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          fetch-depth: 0 # Full clone
+          fetch-depth: 0
 
-      - name: List All CSV Files
+      - name: Debug: List All CSV Files
         run: |
           echo "🔍 Searching for all CSV files in the repository..."
           ALL_CSVS=$(find . -type f -name "*.csv" | sort)
           if [ -z "$ALL_CSVS" ]; then
-            echo "❌ No CSV files found in the repository!"
+            echo "::error::No CSV files found in the repository!"
             echo "Please ensure your CSV files are committed and pushed."
             exit 1
           else
@@ -40,64 +40,49 @@ jobs:
       - name: Parse and Validate Input Files
         id: set-matrix
         run: |
-          # Trim and split input files
           IFS=',' read -ra FILE_LIST <<< "${{ github.event.inputs.files }}"
+          matrix_json="{\"include\": []}"
           valid_count=0
 
-          # Start building matrix
-          matrix_json="{\"include\": ["
-
           for file in "${FILE_LIST[@]}"; do
-            # Trim whitespace
             file=$(echo "$file" | xargs)
-            if [ -z "$file" ]; then
-              continue
-            fi
-            
-            # Validate that file exists
+            if [ -z "$file" ]; then continue; fi
+
             if [ -f "$file" ]; then
               echo "✅ Found input file: $file"
               output_file="${{ github.event.inputs.output_folder }}/$(basename "$file")"
-              matrix_json="$matrix_json {\"input_file\": \"$file\", \"output_file\": \"$output_file\"},"
+              matrix_json=$(echo "$matrix_json" | jq '.include += [{"input_file": "'"$file"'", "output_file": "'"$output_file"'"}]')
               valid_count=$((valid_count + 1))
             else
               echo "::error::File not found: $file"
-              echo "::error::Please check the path. Available files:"
+              echo "::error::Available files:"
               find . -type f -name "*.csv" | xargs echo "  - "
               exit 1
             fi
           done
 
-          # Check if any valid files were found
           if [ $valid_count -eq 0 ]; then
             echo "::error::No valid input files provided."
             exit 1
           fi
 
-          # Finalize JSON (remove trailing comma)
-          matrix_json="${matrix_json%,} ]}"
-
-          # Set matrix as output
-          echo "matrix=$matrix_json" >> "$GITHUB_OUTPUT"
-
-          # Display the generated matrix for debugging
-          echo "✅ Generated matrix for $valid_count file(s):"
-          echo "$matrix_json" | python3 -m json.tool || echo "$matrix_json"
+          echo "matrix=$(echo "$matrix_json" | jq -c .)" >> "$GITHUB_OUTPUT"
+          echo "✅ Generated matrix:"
+          echo "$matrix_json" | jq
 
   run-network-analysis:
     needs: validate-and-split
     runs-on: ubuntu-latest
-    timeout-minutes: 350 # 5h 50m (max safe limit)
+    timeout-minutes: 350
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.validate-and-split.outputs.matrix) }}
 
     steps:
-      - name: Checkout repository via SSH
+      - name: Checkout repo
         uses: actions/checkout@v4
         with:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          fetch-depth: 0 # Full clone
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -107,7 +92,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas cloudscraper beautifulsoup4 tldextract whois dnspython requests aiohttp backoff
+          pip install pandas aiohttp beautifulsoup4 tldextract whois dnspython requests
 
       - name: Create output directory
         run: |
@@ -122,23 +107,52 @@ jobs:
       - name: Verify output
         run: |
           if [ -f "${{ matrix.output_file }}" ]; then
-            echo "✅ Successfully generated ${{ matrix.output_file }}"
+            echo "✅ Generated: ${{ matrix.output_file }}"
+            echo "📊 Rows: $(wc -l < ${{ matrix.output_file }})"
           else
             echo "::error::Failed to generate ${{ matrix.output_file }}"
             exit 1
           fi
 
-  commit-results:
+      - name: Upload Artifact (Per File)
+        uses: actions/upload-artifact@v4
+        with:
+          name: network-feature-${{ basename(matrix.output_file) }}
+          path: ${{ matrix.output_file }}
+
+  upload-all-artifacts:
     needs: run-network-analysis
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository via SSH
+      - name: Download All Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+          path: artifacts/
+
+      - name: List Artifacts
+        run: |
+          echo "📦 All extracted network features:"
+          ls -la artifacts/
+
+      - name: Upload Combined Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: all-network-features
+          path: artifacts/
+          if-no-files-found: warn
+
+  commit-results:
+    needs: upload-all-artifacts
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout and commit
         uses: actions/checkout@v4
         with:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          fetch-depth: 0 # Full clone
+          fetch-depth: 0
 
-      - name: Commit and push network features
+      - name: Add and commit network features
         env:
           GIT_SSH_COMMAND: "ssh -i ${{ secrets.SSH_PRIVATE_KEY }} -o StrictHostKeyChecking=no"
         run: |
@@ -151,6 +165,7 @@ jobs:
             git commit -m "feat: add extracted network features [skip ci]"
             git pull origin main --rebase || echo "Rebase conflict? Safe to retry."
             git push origin main
+            echo "🎉 Successfully pushed results to the repository"
           else
             echo "➡️ No changes to commit"
           fi
